k8s/development/component_django.yaml
###########################
# Deployment
###########################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-dev-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: django-dev
  template:
    metadata:
      labels:
        component: django-dev
    spec:
      containers:
        - name: django-dev-container
          image: flatterus/flatter-backend-dev:latest
          ports:
            - containerPort: 8000
          command: ["bash", "-c", "gunicorn backend.wsgi:application --bind 0.0.0.0:8000 -c gunicorn.conf.py"]
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"

---
###########################
# Cluster IP Service
###########################
apiVersion: v1
kind: Service
metadata:
  name: django-dev-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: django-dev
  ports:
    - port: 8000
      targetPort: 8000
