k8s/development/component_react.yaml
###########################
# Deployment
###########################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-dev-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: react-dev
  template:
    metadata:
      labels:
        component: react-dev
    spec:
      containers:
        - name: react-dev-container
          image: flatterus/flatter-client-dev:latest
          ports:
            - containerPort: 3000
          command: ["sh", "-c", "serve -s build -l 3000 --no-clipboard"]       

---
###########################
# Cluster IP Service
###########################
apiVersion: v1
kind: Service
metadata:
  name: react-dev-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: react-dev
  ports:
    - port: 3000
      targetPort: 3000
